samples/_failures_safe/1761440355_5f6d7f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64990724.c: In function ‘tokenize’:
./samples/SAFE/__tmp_64990724.c:178:9: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  178 |         token
      |         ^~~~~
      |         Token
./samples/SAFE/__tmp_64990724.c:178:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_64990724.c:178:14: error: expected ‘;’ at end of input
  178 |         token
      |              ^
      |              ;
./samples/SAFE/__tmp_64990724.c:178:9: error: expected declaration or statement at end of input
  178 |         token
      |         ^~~~~
./samples/SAFE/__tmp_64990724.c:178:9: error: expected declaration or statement at end of input
